# qmeal

./: .gitattributes  .gitignore  .replit  auth_testing.md  backend_test.py  fix_owner.py  model.patch  owner_test.py  pyproject.toml  replit.md  start.sh  test_result.md  test_roles.py
.emergent/: emergent.yml
.github/workflows/: build-apk.yml
.logs/: mongod.log.2026-04-24T10-41-13  mongod.log.2026-04-24T10-43-35  mongod.log.2026-04-24T10-54-05  mongod.log.2026-04-24T22-17-00
.mongodb-data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-4987896608617487688.wt  collection-2-4987896608617487688.wt  collection-4-4987896608617487688.wt  collection-7-4987896608617487688.wt  index-1-4987896608617487688.wt  index-3-4987896608617487688.wt  index-5-4987896608617487688.wt  index-6-4987896608617487688.wt  index-8-4987896608617487688.wt  sizeStorer.wt
.mongodb-data/diagnostic.data/: metrics.2026-04-24T10-38-58Z-00000  metrics.2026-04-24T10-41-14Z-00000  metrics.2026-04-24T10-43-37Z-00000  metrics.2026-04-24T10-54-07Z-00000  metrics.2026-04-24T22-17-03Z-00000  metrics.interim
.mongodb-data/journal/: WiredTigerLog.0000000004
backend/: server.py  startup.sh  startup.txt
frontend/: .env  app.json  eas.json  metro.config.js  package-lock.json  package.json
frontend/android/: settings.gradle
frontend/android/app/: build.gradle
frontend/app/: _layout.tsx  cart.tsx  checkout.tsx  edit-profile.tsx  favorites.tsx  index.tsx  notifications.tsx
frontend/app/(admin)/: _layout.tsx  index.tsx  restaurants.tsx  settings.tsx  (+1 more)
memory/: test_credentials.md
(+45 files in other folders)
