[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.1.3",
    "email-validator==2.3.0",
    "fastapi==0.110.1",
    "httpx==0.28.1",
    "motor>=3.5.3",
    "pydantic==2.12.5",
    "pyjwt==2.10.1",
    "pymongo==4.5.0",
    "python-dotenv>=1.2.2",
    "python-multipart==0.0.21",
    "requests>=2.33.1",
    "stripe==14.1.0",
    "uvicorn==0.25.0",
]
